--- a/index.html
+++ b/index.html
@@ -19,61 +19,93 @@
     y: canvas.height - 40,
     width: 50,
     height: 20,
-    speed: 5,
     color: 'white'
   };
 
   let bullets = [];
   let blobs = [];
   let blobSpawnTimer = 0;
+  let bulletFireTimer = 0;
   let score = 0;
+  let gameOver = false;  // Flag to track game state
 
-  // Multipliers for power-ups
+  // Multipliers and special fire state for power-ups
   let bulletSpeedMultiplier = 1;
   let playerSpeedMultiplier = 1;
+  // Special fire effect: when active, fire interval is halved (faster fire)
+  let specialFireActive = false;
+  let specialFireEndTime = 0;
 
-  // Listen for key presses
-  document.addEventListener('keydown', (e) => {
-    if (e.key === 'ArrowLeft') {
-      player.x -= player.speed * playerSpeedMultiplier;
-      if (player.x < 0) player.x = 0;
-    } else if (e.key === 'ArrowRight') {
-      player.x += player.speed * playerSpeedMultiplier;
-      if (player.x + player.width > canvas.width) {
-        player.x = canvas.width - player.width;
+  // Update player's x-coordinate based on mouse movement
+  canvas.addEventListener('mousemove', (e) => {
+    const rect = canvas.getBoundingClientRect();
+    player.x = e.clientX - rect.left - player.width / 2;
+    // Ensure the player stays within bounds
+    if (player.x < 0) player.x = 0;
+    if (player.x + player.width > canvas.width) {
+      player.x = canvas.width - player.width;
+    }
+  });
+
+  // Function to spawn a cluster of blobs (3-8 per cluster)
+  function spawnCluster() {
+    const count = Math.floor(Math.random() * (8 - 3 + 1)) + 3;
+    // Choose a cluster center (with some margins)
+    const clusterCenterX = Math.random() * (canvas.width - 100) + 50;
+    const spread = 50; // Spread distance for cluster
+
+    // Randomly decide if this cluster will include a special blob (30% chance)
+    const includeSpecial = Math.random() < 0.3;
+    // Randomly select an index for the special blob if applicable
+    const specialIndex = includeSpecial ? Math.floor(Math.random() * count) : -1;
+
+    for (let i = 0; i < count; i++) {
+      const offsetX = (Math.random() - 0.5) * spread;
+      const offsetY = (Math.random() - 0.5) * spread;
+      const blob = {
+        x: clusterCenterX + offsetX,
+        y: -20 + offsetY,
+        radius: 20,
+        // Slower speed: random value between 1 and 2
+        speed: 1 + Math.random(),
+        // Normal blobs have a random color; special ones will be marked and rendered differently.
+        color: 'hsl(' + Math.random() * 360 + ', 100%, 50%)',
+        special: false
+      };
+      if (i === specialIndex) {
+        blob.special = true;
+        // Optionally override color so that it's more distinctive
+        blob.color = 'magenta';
       }
-    } else if (e.key === ' ') {
-      // Fire a bullet when the spacebar is pressed
+      blobs.push(blob);
+    }
+  }
+
+  // Update game state: move bullets, blobs, check collisions, and game over condition
+  function update() {
+    // Check if the special fire effect should end
+    if (specialFireActive && Date.now() > specialFireEndTime) {
+      specialFireActive = false;
+    }
+
+    // Determine bullet firing interval based on special fire status:
+    // Normal fire every 10 frames; if special, every 5 frames.
+    const bulletInterval = specialFireActive ? 5 : 10;
+    bulletFireTimer++;
+    if (bulletFireTimer > bulletInterval) {
       bullets.push({
         x: player.x + player.width / 2,
         y: player.y,
         radius: 5,
         speed: 7 * bulletSpeedMultiplier
       });
+      bulletFireTimer = 0;
     }
-  });
 
-  // Function to spawn a new blob in one of several lanes
-  function spawnBlob() {
-    const lanes = 5; // Adjust the number of lanes as desired
-    const laneWidth = canvas.width / lanes;
-    const lane = Math.floor(Math.random() * lanes);
-    const blob = {
-      x: lane * laneWidth + laneWidth / 2,
-      y: -20,
-      radius: 20,
-      speed: 2 + Math.random() * 2, // Random speed for variety
-      color: 'hsl(' + Math.random() * 360 + ', 100%, 50%)'
-    };
-    blobs.push(blob);
-  }
-
-  // Update game state: move bullets, blobs, and check collisions
-  function update() {
-    // Spawn blobs periodically
+    // Spawn blob clusters periodically
     blobSpawnTimer++;
-    if (blobSpawnTimer > 50) { // Adjust spawn frequency here
-      spawnBlob();
+    if (blobSpawnTimer > 50) { // Adjust spawn frequency as needed
+      spawnCluster();
       blobSpawnTimer = 0;
     }
 
@@ -88,6 +120,11 @@
     // Update blobs: move them downward
     for (let i = blobs.length - 1; i >= 0; i--) {
       blobs[i].y += blobs[i].speed;
+      // Check if any blob reaches the player's line
+      if (blobs[i].y + blobs[i].radius >= player.y) {
+        gameOver = true;
+        return;
+      }
       if (blobs[i].y - blobs[i].radius > canvas.height) {
         blobs.splice(i, 1);
       }
@@ -100,15 +137,20 @@
         const dy = blobs[i].y - bullets[j].y;
         const distance = Math.sqrt(dx * dx + dy * dy);
         if (distance < blobs[i].radius + bullets[j].radius) {
-          // On hit, apply a random power-up:
-          if (Math.random() < 0.5) {
-            // Boost player speed
-            playerSpeedMultiplier += 0.1;
+          // If a special blob is hit, activate the special fire effect (2x faster) for 10 seconds.
+          if (blobs[i].special) {
+            specialFireActive = true;
+            specialFireEndTime = Date.now() + 10000; // 10 seconds
           } else {
-            // Boost bullet speed
-            bulletSpeedMultiplier += 0.1;
+            // For normal blobs, apply a random power-up: either boost player speed or bullet speed.
+            if (Math.random() < 0.5) {
+              playerSpeedMultiplier += 0.1;
+            } else {
+              bulletSpeedMultiplier += 0.1;
+            }
           }
           score += 10;
+          // Remove the blob and bullet upon collision
           blobs.splice(i, 1);
           bullets.splice(j, 1);
           break;
@@ -121,7 +163,7 @@
   function draw() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-    // Draw the player
+    // Draw the player (ship)
     ctx.fillStyle = player.color;
     ctx.fillRect(player.x, player.y, player.width, player.height);
 
@@ -139,23 +181,44 @@
       ctx.beginPath();
       ctx.arc(blob.x, blob.y, blob.radius, 0, Math.PI * 2);
       ctx.fill();
+      
+      // If the blob is special, draw an additional pulsating outline.
+      if (blob.special) {
+        let pulsate = Math.abs(Math.sin(Date.now() / 200)) * 5;
+        ctx.strokeStyle = 'cyan';
+        ctx.lineWidth = 3;
+        ctx.beginPath();
+        ctx.arc(blob.x, blob.y, blob.radius + pulsate, 0, Math.PI * 2);
+        ctx.stroke();
+      }
     });
 
     // Draw score
     ctx.fillStyle = 'white';
     ctx.font = '20px Arial';
     ctx.fillText('Score: ' + score, 10, 30);
+
+    // If game over, display message
+    if (gameOver) {
+      ctx.fillStyle = 'red';
+      ctx.font = '50px Arial';
+      ctx.textAlign = 'center';
+      ctx.fillText('Game Over', canvas.width / 2, canvas.height / 2);
+    }
   }
 
   // Main game loop
   function gameLoop() {
-    update();
-    draw();
-    requestAnimationFrame(gameLoop);
+    if (!gameOver) {
+      update();
+      draw();
+      requestAnimationFrame(gameLoop);
+    } else {
+      draw();  // Final draw to show the game over message
+    }
   }
 
   gameLoop();
 </script>
 </body>
 </html>
-
