--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <title>Space Invader Style Shooter</title>
   <style>
-    body { margin: 0; overflow: hidden; background: black; }
+    body { margin: 0; overflow: hidden; background: darkslategrey; }
     canvas { display: block; margin: 0 auto; background: #000; }
   </style>
 </head>
 <body>
-<canvas id="gameCanvas" width="600" height="800"></canvas>
+<canvas id="gameCanvas" height="1024px" width="768x"></canvas>
 <script>
   const canvas = document.getElementById('gameCanvas');
   const ctx = canvas.getContext('2d');
