--- a/index.html
+++ b/index.html
@@ -398,10 +398,26 @@
           if (boss.health <= 0) {
             // Boss defeated.
             boss = null;
-            permanentRapidLevel = 3; // Set rapid fire to displayed level 4 (1+3)
-            permanentSprayLevel = 1; // Set spray to displayed level 2 (1+1)
-            bombCount += 2;        // Award 2 new bombs.
+            permanentRapidLevel = 2; // Set rapid fire to displayed level 4 (1+3)
+            permanentSprayLevel = 2; // Set spray to displayed level 2 (1+1)
+            if (permanentBulletLevel === 5) {
+              permanentBulletLevel = 2
+            } else {
+              permanentBulletLevel = 1
+            }
+            
+            if(bombCount >= 3) {
+              bombCount = bombCount + 1;
+            }
+
+            else if (bombCount === 2) {
+              bombCount += 2; 
+            }
+            else {
+              bombCount = 3
+            }
           }
+
           break;
         }
       }
